--- a/choompy_store.html
+++ b/choompy_store.html
@@ -3,67 +3,68 @@
     <head>
         <meta charset="utf-8">
         <title>צ'ומפי חנות</title>
+        <link rel="stylesheet" href="choompys store.css">
     </head>
 
     <body bgcolor="lightblue">
         <font face="arial">
             <center>
-                <font size="+3"><h1 style="color:purple">צ'ומפי חנות</h1></font>
-                <hr style="height:3px;border-width:0;background-color:#212172;width:50%"/>
+                <font size="+3"><h1 style="color:purple">צ'ומפי חנות</h1>
+                <hr/>
 
-                <h3><a href="https://docs.google.com/forms/d/e/1FAIpQLScXlVjJQsmGjuOBhhyzzN3pzEZWGPySowip2l1tzQwEZCAwLw/viewform?usp=sf_link">להזמנות לחצו כאן</a></h3>
-                <hr style="height:3px;border-width:0;background-color:#212172;width:50%"/>
+                <h3 class="cost"><a href="https://docs.google.com/forms/d/e/1FAIpQLScXlVjJQsmGjuOBhhyzzN3pzEZWGPySowip2l1tzQwEZCAwLw/viewform?usp=sf_link">להזמנות לחצו כאן</a></h3>
+                <hr/>
 
-                <font size="+2"><h2>המוצר השבועי</h2></font>
-                <font size="+1"><h2 style="color:darkred">מנורה!</h2></font>
-                <h3 style="color:#0d746b">מחיר: 3.10</h3>
-                <h3 style="color:#0d746b">מראה:</h3>
+                <h2 class="heading">המוצר השבועי</h2>
+                <h2 class="product">מנורה!</h2>
+                <h3 class="cost">מחיר: 3.10</h3>
+                <h3 class="cost">מראה:</h3>
                 <img src="מנורה חנות צומפי.png" alt="מנורה צ'ומפי חנות" width="225" height="128">
-                <hr style="height:3px;border-width:0;background-color:#212172;width:50%"/>
+                <hr/>
 
-                <font size="+2"><h2>מאפים</h2></font>
-                <font size="+1" color="darkred"><h2>לחם</h2></font>
-                <h3 style="color:#0d746b">מחיר: 10.20</h3>
-                <font size="+1" color="darkred"><h2>עוגיה</h2></font>
-                <h3 style="color:#0d746b">מחיר: 20.40</h3>
-                <font size="+1" color="darkred"><h2>בייגלה</h2></font>
-                <h3 style="color:#0d746b">מחיר: 30.60</h3>
-                <hr style="height:3px;border-width:0;background-color:#212172;width:50%"/>
+                <h2 class="heading">מאפים</h2>
+                <h2 class="product">לחם</h2>
+                <h3 class="cost">מחיר: 10.20</h3>
+                <h2 class="product">עוגיה</h2>
+                <h3 class="cost">מחיר: 20.40</h3>
+                <h2 class="product">בייגלה</h2>
+                <h3 class="cost">מחיר: 30.60</h3>
+                <hr/>
 
-                <font size="+2"><h2>אוכל לחיות</h2></font>
-                <font size="+1" color="darkred"><h2>אוכל לפרות</h2></font>
-                <font style="color:#212172"><h3>(מגיעים שלושה לכל הזמנה)</h3></font>
-                <h3 style="color:#0d746b">מחיר: 20.30</h3>
-                <font size="+1" color="darkred"><h2>אוכל לתרנגולות</h2></font>
-                <font style="color:#212172"><h3>(מגיעים שלושה לכל הזמנה)</h3></font>
-                <h3 style="color:#0d746b">מחיר: 30.20</h3>
-                <font size="+1" color="darkred"><h2>אוכל לכבשים</h2></font>
-                <font style="color:#212172"><h3>(מגיעים שלושה לכל הזמנה)</h3></font>
-                <h3 style="color:#0d746b">מחיר: 20.40</h3>
-                <hr style="height:3px;border-width:0;background-color:#212172;width:50%"/>
+                <h2 class="heading">אוכל לחיות</h2>
+                <h2 class="product">אוכל לפרות</h2>
+                <h3 class="cost">(מגיעים שלושה לכל הזמנה)</h3>
+                <h3 class="cost">מחיר: 20.30</h3>
+                <h2 class="product">אוכל לתרנגולות</h2>
+                <h3 class="cost">(מגיעים שלושה לכל הזמנה)</h3>
+                <h3 class="cost">מחיר: 30.20</h3>
+                <h2 class="product">אוכל לכבשים</h2>
+                <h3 class="cost">(מגיעים שלושה לכל הזמנה)</h3>
+                <h3 class="cost">מחיר: 20.40</h3>
+                <hr/>
 
-                <font size="+2"><h2>סוכר</h2></font>
-                <font size="+1" color="darkred"><h2>סוכר</h2></font>
-                <h3 style="color:#0d746b">מחיר: 10.10</h3>
-                <hr style="height:3px;border-width:0;background-color:#212172;width:50%"/>
+                <h2 class="heading">סוכר</h2>
+                <h2 class="product">סוכר</h2>
+                <h3 class="cost">מחיר: 10.10</h3>
+                <hr/>
 
-                <font size="+2"><h2>תפירה</h2></font>
-                <font size="+1" color="darkred"><h2>בד</h2></font>
-                <h3 style="color:#0d746b">מחיר: 10.20</h3>
-                <font size="+1" color="darkred"><h2>חוטים</h2></font>
-                <h3 style="color:#0d746b">מחיר: 10.20</h3>
-                <font size="+1" color="darkred"><h2>חולצה</h2></font>
-                <h3 style="color:#0d746b">מחיר: 10.20</h3>
-                <hr style="height:3px;border-width:0;background-color:#212172;width:50%"/>
+                <h2 class="heading">תפירה</h2>
+                <h2 class="product">בד</h2>
+                <h3 class="cost">מחיר: 10.20</h3>
+                <h2 class="product">חוטים</h2>
+                <h3 class="cost">מחיר: 10.20</h3>
+                <h2 class="product">חולצה</h2>
+                <h3 class="cost">מחיר: 10.20</h3>
+                <hr/>
 
-                <font size="+2"><h2>מוצרי חלב</h2></font>
-                <font size="+1" color="darkred"><h2>דייסה</h2></font>
-                <h3 style="color:#0d746b">מחיר: 10.10</h3>
-                <font size="+1" color="darkred"><h2>גבינה</h2></font>
-                <h3 style="color:#0d746b">מחיר: 10.20</h3>
-                <font size="+1" color="darkred"><h2>חמאה</h2></font>
-                <h3 style="color:#0d746b">מחיר: 10.30</h3>
-                <hr style="height:3px;border-width:0;background-color:#212172;width:50%"/>
+                <h2 class="heading">מוצרי חלב</h2>
+                <h2 class="product">דייסה</h2>
+                <h3 class="cost">מחיר: 10.10</h3>
+                <h2 class="product">גבינה</h2>
+                <h3 class="cost">מחיר: 10.20</h3>
+                <h2 class="product">חמאה</h2>
+                <h3 class="cost">מחיר: 10.30</h3>
+                <hr/>
 
                 <h1 style="color:purple">תודה שהזמנתם מצ'ומפי חנות!! נתראה בפעם הבאה!</h1>
             </center>
