--- a/choompy_store.html
+++ b/choompy_store.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>צ'ומפי חנות</title>
-        <link rel="stylesheet" href="choompys store.css">
+        <link rel="stylesheet" href="choompys_store.css">
     </head>
 
     <body bgcolor="lightblue">
         <font face="arial">
             <center>
-                <font size="+3"><h1 style="color:purple">צ'ומפי חנות</h1>
+                <h1 class="title">צ'ומפי חנות</h1>
+                <hr/>
+                <h3>עשו זאת בעצמכם!</h3>
+                <h3>לחצו <a href="choompys_recipes.html" title="צ'ומפי מתכונים" target="_blank">כאן</a> כדי להיכנס לצ'ומפי מתכונים!</h3>
                 <hr/>
 
                 <h3 class="cost"><a href="https://docs.google.com/forms/d/e/1FAIpQLScXlVjJQsmGjuOBhhyzzN3pzEZWGPySowip2l1tzQwEZCAwLw/viewform?usp=sf_link">להזמנות לחצו כאן</a></h3>
