--- a/farm chicken.html
+++ b/farm chicken.html
@@ -42,7 +42,7 @@
 		</ul>
 		<p>How fun!</p>
 		<p>Our most famous chicken is called Zvika. It is a male, And he is really a chicken.</p>
-		<p>I mean, all of our chickens are real chickens [nervous loughter], but Zvika is a coward.</p>
+		<p>I mean, all of our chickens are real chickens [nervous loughter], but Zvika is coward.</p>
 		<p>He is scared of playing! PLAYING!! Can you believe it??</p>
 		<p>In the photo you can see Zvika, after someone tried to play with him.</p>
 		<img src="dad the chicken.jfif" class="center" title="Zvika" width="1000px"/>
