--- a/farm.html
+++ b/farm.html
@@ -41,7 +41,7 @@
 		<ul><li><a href="farm chicken.html" title="our chickens">8 chickens</a></li>
 			<li><a href="farm sheep.html" title="our sheep">3 sheep</a></li>
 			<li><a href="farm monkey.html" title="our monkey">A monkey</a></li>
-			<li>A turtle</li></ul>
+			<li><a href="farm-turtle.html" title="our turtle">A turtle</a></li></ul>
 		<p></p>
 		<p>We made a chart for comparing our animals. You can see it <a href="farm comaring.html" title="table">here</a>!</p>
 	</body>
