--- a/farm comaring.html
+++ b/farm comaring.html
@@ -183,7 +183,7 @@
 				<td>Vedgetarian</td>
 			</tr>
 			<tr align=center>
-				<th>turtle</th>
+				<th>Turtle</th>
 				<td>Mr. Lettuce</td>
 				<td>M</td>
 				<td>3</td>
