--- a/farm chicken.html
+++ b/farm chicken.html
@@ -10,28 +10,10 @@
 			<table class="noborder" cellspacing="7px">
 				<tr>
 					<th class="noborder"><a href="farm.html" title="Home">Home</a></th>
-					<th class="noborder">Animals</th>
+					<th class="noborder"><a href="animals.html" title="Animals">Animals</a></th>
 					<th class="noborder"><a href="farm comaring.html" title="Comparing chart">Comparing chart</a></th>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm chicken.html" title="Chickens">Chickens</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm sheep.html" title="Sheep">Sheep</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm monkey.html" title="Monkey">Monkey</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm-turtle.html" title="Turtle">Turtle</a></td>
-					<td class="noborder"></td>
+					<th class="noborder"><a href="farm-people.html" title="The family">The family</a></th>
+					<th class="noborder"><a href="farm-form.html" title="Contact us">Contact us</a></th>
 				</tr>
 			</table>
 		</div>
@@ -42,9 +24,12 @@
 		</ul>
 		<p>How fun!</p>
 		<p>Our most famous chicken is called Zvika. It is a male, And he is really a chicken.</p>
-		<p>I mean, all of our chickens are real chickens [nervous loughter], but Zvika is coward.</p>
+		<p>I mean, all of our chickens are real chickens, but Zvika is coward.</p>
 		<p>He is scared of playing! PLAYING!! Can you believe it??</p>
 		<p>In the photo you can see Zvika, after someone tried to play with him.</p>
 		<img src="dad the chicken.jfif" class="center" title="Zvika" width="1000px"/>
+		<div>
+			<center><h4>Phone number: 5557863799</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
+		</div>
 	</body>
 </html>
