--- a/farm comaring.html
+++ b/farm comaring.html
@@ -10,28 +10,10 @@
 			<table class="noborder" cellspacing="7px">
 				<tr>
 					<th class="noborder"><a href="farm.html" title="Home">Home</a></th>
-					<th class="noborder">Animals</th>
+					<th class="noborder"><a href="animals.html" title="Animals">Animals</a></th>
 					<th class="noborder"><a href="farm comaring.html" title="Comparing chart">Comparing chart</a></th>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm chicken.html" title="Chickens">Chickens</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm sheep.html" title="Sheep">Sheep</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm monkey.html" title="Monkey">Monkey</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm-turtle.html" title="Turtle">Turtle</a></td>
-					<td class="noborder"></td>
+					<th class="noborder"><a href="farm-people.html" title="The family">The family</a></th>
+					<th class="noborder"><a href="farm-form.html" title="Contact us">Contact us</a></th>
 				</tr>
 			</table>
 		</div>
@@ -125,7 +107,7 @@
 				<td>Meat</td>
 				<td>Seeds</td>
 				<td>3</td>
-				<td>---</td>
+				<td>His leg is broken</td>
 			</tr>
 			<tr align=center>
 				<td>Onion</td>
@@ -186,14 +168,29 @@
 				<th>Turtle</th>
 				<td>Mr. Lettuce</td>
 				<td>M</td>
-				<td>3</td>
+				<td>2</td>
 				<td>1</td>
 				<td>6</td>
 				<td>Nothing</td>
 				<td>Vedgetables</td>
-				<td>8</td>
+				<td>1</td>
 				<td>Likes lettuce</td>
 			</tr>
+			<tr align=center>
+				<th>Owl</th>
+				<td>Eitan</td>
+				<td>M</td>
+				<td>5</td>
+				<td>7</td>
+				<td>4</td>
+				<td>Nothing</td>
+				<td>Little rats and stuff</td>
+				<td>4</td>
+				<td>---</td>
+			</tr>
 		</table>
+		<div>
+			<h4><center>Phone number: 5557863799</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
+		</div>
 	</body>
 </html>
