--- a/farm monkey.html
+++ b/farm monkey.html
@@ -10,28 +10,10 @@
 			<table class="noborder" cellspacing="7px">
 				<tr>
 					<th class="noborder"><a href="farm.html" title="Home">Home</a></th>
-					<th class="noborder">Animals</th>
+					<th class="noborder"><a href="animals.html" title="Animals">Animals</a></th>
 					<th class="noborder"><a href="farm comaring.html" title="Comparing chart">Comparing chart</a></th>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm chicken.html" title="Chickens">Chickens</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm sheep.html" title="Sheep">Sheep</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm monkey.html" title="Monkey">Monkey</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm-turtle.html" title="Turtle">Turtle</a></td>
-					<td class="noborder"></td>
+					<th class="noborder"><a href="farm-people.html" title="The family">The family</a></th>
+					<th class="noborder"><a href="farm-form.html" title="Contact us">Contact us</a></th>
 				</tr>
 			</table>
 		</div>
@@ -41,5 +23,8 @@
 		<img src="monkey2.jpg" class="center" title="Rafi" width="400px"/>
 		<p>Yes, Rafi, that's wrong. You seriously didn't know it?</p>
 		<img src="confused-monkey.jpg" class="center" title="hmmm?" width="500"/>
+		<div>
+			<h4><center>Phone number: 5557863799</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
+		</div>
 	</body>
 </html>
