--- a/farm.html
+++ b/farm.html
@@ -10,39 +10,38 @@
 			<table class="noborder" cellspacing="7px">
 				<tr>
 					<th class="noborder"><a href="farm.html" title="Home">Home</a></th>
-					<th class="noborder">Animals</th>
+					<th class="noborder"><a href="animals.html" title="Animals">Animals</a></th>
 					<th class="noborder"><a href="farm comaring.html" title="Comparing chart">Comparing chart</a></th>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm chicken.html" title="Chickens">Chickens</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm sheep.html" title="Sheep">Sheep</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm monkey.html" title="Monkey">Monkey</a></td>
-					<td class="noborder"></td>
-				</tr>
-				<tr>
-					<td class="noborder"></td>
-					<td class="noborder"><a href="farm-turtle.html" title="Turtle">Turtle</a></td>
-					<td class="noborder"></td>
+					<th class="noborder"><a href="farm-people.html" title="The family">The family</a></th>
+					<th class="noborder"><a href="farm-form.html" title="Contact us">Contact us</a></th>
 				</tr>
 			</table>
 		</div>
 		<center><h1>Welcome to our farm!</h1></center>
+		<p>Our farm is located in the center of Utah
+		(<a href="https://www.google.com/maps/place/Triple+C+Farms/@39.1990247,-112.3907823,14z/data=!4m5!3m4!1s0x874ca4fb25881a69:0x36c1e0686d372f50!8m2!3d39.1991775!4d-112.3730347" target="_blank">here</a>).</p>
+		<p>Visiting Canyonlands? Arches? Capitol Reef? Zion? Bryce Canyon?<br/>
+			Visit us too, for only 80 dollars per person! 50 dollars for kids under 15 years!*<br/>
+			Open from 6:30 AM to 11:00 PM! (8:00 PM to 11:00 PM are best hours to watch our owl).<br/>
+			Pay attention: Google Maps says our name is Triple C Farm, but that's an error. Our name is Triple F farm.
+		</p>
+		
 		<p>We have lots of animals here! Wanna see?</p>
 		<p>We have...</p>
 		<ul><li><a href="farm chicken.html" title="our chickens">8 chickens</a></li>
 			<li><a href="farm sheep.html" title="our sheep">3 sheep</a></li>
 			<li><a href="farm monkey.html" title="our monkey">A monkey</a></li>
-			<li><a href="farm-turtle.html" title="our turtle">A turtle</a></li></ul>
+			<li><a href="farm-turtle.html" title="our turtle">A turtle</a></li>
+			<li><a href="farm-owl.html" title="our owl">An owl</a></li></ul>
 		<p></p>
+		
 		<p>We made a chart for comparing our animals. You can see it <a href="farm comaring.html" title="table">here</a>!</p>
+		<p>Do you want to contact us? Click <a href="farm-form.html" title="Contact us">here</a>!</a>
+		<p>Do you want to learn about our family? Click <a href="farm-people.html" title="Our family">here</a>!</p>
+		
+		<h5>*No pets allowed</h5>
+		<div>
+			<h4><center>Phone number: 5557863799</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
+		</div>
 	</body>
 </html>
