--- a/farm.html
+++ b/farm.html
@@ -26,14 +26,7 @@
 			Pay attention: Google Maps says our name is Triple C Farm, but that's an error. Our name is Triple F farm.
 		</p>
 		
-		<p>We have lots of animals here! Wanna see?</p>
-		<p>We have...</p>
-		<ul><li><a href="farm chicken.html" title="our chickens">8 chickens</a></li>
-			<li><a href="farm sheep.html" title="our sheep">3 sheep</a></li>
-			<li><a href="farm monkey.html" title="our monkey">A monkey</a></li>
-			<li><a href="farm-turtle.html" title="our turtle">A turtle</a></li>
-			<li><a href="farm-owl.html" title="our owl">An owl</a></li></ul>
-		<p></p>
+		<p>Do you want to see our animals? Click <a href="animals.html" title="Our animals">here</a>!</p>
 		
 		<p>We made a chart for comparing our animals. You can see it <a href="farm comaring.html" title="table">here</a>!</p>
 		<p>Do you want to contact us? Click <a href="farm-form.html" title="Contact us">here</a>!</a>
