--- a/farm-people.html
+++ b/farm-people.html
@@ -19,7 +19,7 @@
 		</div>
 		<center><h1>The family</h1></center>
 		<p>Our farm is maintained by our family: Lily, Ben and Stacy.</p>
-		<p>Rachel is 36, Ben is 35 and Stacy is 4. We teach Stacy to feed the animals and take care of them.</p>
+		<p>Lily is 36, Ben is 35 and Stacy is 4. We teach Stacy to feed the animals and take care of them.</p>
 		<img src="farm-family.jpg" class="center" title="The family" width="500px"/>
 		<p>Here you can see Stacy feeding Bone.</p>
 		<img src="stacy-and-bone.jpg" class="center" width="500px"/>
