--- a/farm.html
+++ b/farm.html
@@ -31,7 +31,7 @@
 		<p>We made a chart for comparing our animals. You can see it <a href="farm comaring.html" title="table">here</a>!</p>
 		<p>Do you want to contact us? Click <a href="farm-form.html" title="Contact us">here</a>!</a>
 		<p>Do you want to learn about our family? Click <a href="farm-people.html" title="Our family">here</a>!</p>
-		
+		<p>We have friends in Florida, called Triple C Farm (not Triple F Farm like us). Do you want to see their website? Click <a href="https://www.triplecfarm.ca/" title="Triple C Farm">here</a>!</p>
 		<h5>*No pets allowed</h5>
 		<div>
 			<h4><center>Phone number: 5557863799</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
