--- a/farm sheep.html
+++ b/farm sheep.html
@@ -26,7 +26,7 @@
 		<p>In the image, you can see Anne and Trom together.</p>
 		<img src="Ann and Trom.jpg" class="center" title="Anne and Trom" width="600px"/>
 		<p>And here you can see Bone.</p>
-		<img src="Bone2.png" class="center" title="Bone" width="490px"/>
+		<img src="Bone2.png" class="center" title="Bone2" width="490px"/>
 		<div>
 			<h4><center>Phone number: 5557863799</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
 		</div>
