Small fixes to the English and html

--- a/farm-turtle.html
+++ b/farm-turtle.html
@@ -18,7 +18,7 @@
 			</table>
 		</div>
 		<center><h1>Our turtle</h1></center>		
-		<p>Our turtle is called Mr. Lettuce. He is old (23 years) and grumpy. If you would get too close to him, he would bite you.</p>
+		<p>Our turtle is called Mr. Lettuce. He is old (23 years) and grumpy. If you get too close to him, he will bite you.</p>
 		<p>Mr. Lettuce's favorite food is lettuce. The only thing he actually wants is lettuce.</p>
 		<p>So we give him lettuce.</p>
 		<p>Lots of lettuce.</p>
