--- a/farm sheep.html
+++ b/farm sheep.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title>Our sheep</title>
@@ -6,7 +6,7 @@
 	</head>
 	
 	<body background="green3.jpg">
-		<div width=100%>
+		<div>
 			<table class="noborder" cellspacing="7px">
 				<tr>
 					<th class="noborder"><a href="farm.html" title="Home">Home</a></th>
@@ -16,19 +16,20 @@
 					<th class="noborder"><a href="farm-form.html" title="Contact us">Contact us</a></th>
 				</tr>
 			</table>
-		</div><center><h1>Our sheep</h1></center>
+		</div>
+		<center><h1>Our sheep</h1></center>
 		<p>We have three sheep. They are not very famous, but we still love them.</p>
 		<p>There is a story about these sheep. The tow young ones, Trom and Bone (which is called bone because he's bony)
 			are twins. Their father, Jelly, had died a week after they were born.
 			Their mother, Anne, didn't want to take care of two children, so she chose Trom and fed only him.
-			At first, we thougt that only Trom was born, but after two days we found Bone lying on the ground
+			At first, we thought that only Trom was born, but after two days we found Bone lying on the ground
 			near a tree. We fed him and he returned to his normal mood. Since then, we feed him every morning and evening.</p>
 		<p>In the image, you can see Anne and Trom together.</p>
 		<img src="Ann and Trom.jpg" class="center" title="Anne and Trom" width="600px"/>
 		<p>And here you can see Bone.</p>
-		<img src="Bone2.png" class="center" title="Bone2" width="490px"/>
+		<img src="bone2.png" class="center" title="Bone2" width="490px"/>
 		<div>
-			<h4><center>Phone number: 5557863799</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
+			<h4><center>Phone number: 5557863799<br/>Email: fff.contact@gmail.com<br/>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
 		</div>
 	</body>
 </html>
