Add iframe to Triple F Farm on Google Maps

--- a/farm.html
+++ b/farm.html
@@ -18,8 +18,9 @@
 			</table>
 		</div>
 		<center><h1>Welcome to our farm!</h1></center>
-		<p>Our farm is located in the center of Utah
-		(<a href="https://www.google.com/maps/place/Triple+C+Farms/@39.1990247,-112.3907823,14z/data=!4m5!3m4!1s0x874ca4fb25881a69:0x36c1e0686d372f50!8m2!3d39.1991775!4d-112.3730347" target="_blank">here</a>).</p>
+		<div class="rightside"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59824.70472508269!2d-112.413145850143!3d39.20308906155277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874ca4fb25881a69%3A0x36c1e0686d372f50!2sTriple%20C%20Farms!5e1!3m2!1sen!2sil!4v1659621964659!5m2!1sen!2sil" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</div>
+		<p>Our farm is located in the center of Utah.</p>
 		<p>Visiting Canyonlands? Arches? Capitol Reef? Zion? Bryce Canyon?<br/>
 			Visit us too, for only 80 dollars per person! 50 dollars for kids under 15 years!*<br/>
 			Open from 6:30 AM to 11:00 PM! (8:00 PM to 11:00 PM are best hours to watch our owl).<br/>
