Add iframe to contact and change phone number

--- a/farm-form.html
+++ b/farm-form.html
@@ -18,26 +18,12 @@
 			</table>
 		</div>
 		<center><h1>Contact us</h1></center>
-		<p>Do you wanna ask simething? Say something? Donate money?</p>
+		<p>Do you wanna ask something? Say something? Donate money?</p>
 		<p>Then do it!</p>
-		<form>
-			<p><label>Name: </label><input type="text" name="name"/></p>
-			<p><label>Do you want to: </label><br/>
-				<input type="checkbox" name="wanna"/>Give us an animal/s<br/>
-				<label>What animal/s?</label><br/><input type="text" name="giveusanimal"/><br/>
-				<input type="checkbox" name="wanna"/>Come for a visit<br/>
-				<label>Date</label><br/><input type="text" name="date"/><br/>
-				<label>For how much time? (Ten minutes to three hours)</label><br/><input type="text" name="howmuchtime"/><br/>
-				<input type="checkbox" name="wanna"/>Donate money<br/>
-				<label>Oooooh, thank you! How much?</label><br/><input type="text" name="money"/><br/>
-				<label>What is your credit card number?</label><br/><input type="text" name="money"/><br/>
-				<input type="checkbox" name="wanna"/>Other: <br/>
-				<textarea name="other" rows="10" cols="40"></textarea><br/>
-				<input type="reset" value="Submit" name="submit"/>
-				<input type="reset" value="Reset" name="reset"/></p>
-		</form>
+		<div id="form"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdZGUmmw0MWIEGnxNMt6Kk3UwY99O2mQ1vClejt0ANGnVH0TA/viewform?embedded=true" width="640" height="687" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+		</div>
 		<div><center> You can also contact us in these ways:<br/>
-				Phone number: 5557863799</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
+				Phone number: 5556789123</br>Email: fff.contact@gmail.com</br>Triple F Farms, 11000 McCornick Rd, Delta, UT 84624, United States</center></h4>
 		</div>
 	</body>
 </html>
