--- a/farm-people.html
+++ b/farm-people.html
@@ -10,7 +10,15 @@
 			<table class="noborder" cellspacing="7px">
 				<tr>
 					<th class="noborder"><a href="farm.html" title="Home">Home</a></th>
-					<th class="noborder"><a href="animals.html" title="Animals">Animals</a></th>
+					<th class="noborder"><a href="animals.html" title="Animals">Animals</a>
+						<div class="dropdown">
+							<a href="farm chicken.html" title="our chickens">8 chickens</a><br/>
+							<a href="farm sheep.html" title="our sheep">3 sheep</a><br/>
+							<a href="farm monkey.html" title="our monkey">A monkey</a><br/>
+							<a href="farm-turtle.html" title="our turtle">A turtle</a><br/>
+							<a href="farm-owl.html" title="our owl">An owl</a>
+						</div>
+					</th>
 					<th class="noborder"><a href="farm comaring.html" title="Comparing chart">Comparing chart</a></th>
 					<th class="noborder"><a href="farm-people.html" title="The family">The family</a></th>
 					<th class="noborder"><a href="farm-form.html" title="Contact us">Contact us</a></th>
