--- a/htmlexercise02.html
+++ b/htmlexercise02.html
@@ -11,7 +11,7 @@
 				<td></td>
 				<td class="thecells">
 					<div>
-						<div class="absolute">Zvika</div>
+						<div class="absolute">ZVIKA<br/>Zvika is a chicken that doesn't want to play.</div>
 						<img class="image" src="chicken.png"/>
 					</div>
 				</td>
@@ -19,7 +19,7 @@
 				<td></td>
 				<td class="thecells">
 					<div>
-						<div class="absolute">Rafi</div>
+						<div class="absolute">RAFI<br/>Rafi is a monkey that thinks he is smart. (he isn't)</div>
 						<img class="image" src="rafi.png"/>
 					</div>
 				</td>
@@ -27,7 +27,7 @@
 				<td></td>
 				<td class="thecells">
 					<div>
-						<div class="absolute">Me</div>
+						<div class="absolute">ME<br/>I didn't get my genes from them.</div>
 						<img class="image" src="me.png"/>
 					</div>
 				</td>
