Text opacity 100% and not 75%

--- a/htmlexercise02.html
+++ b/htmlexercise02.html
@@ -11,7 +11,13 @@
 				<td></td>
 				<td class="thecells">
 					<div>
-						<div class="absolute">ZVIKA<br/>Zvika is a chicken that doesn't want to play.</div>
+						<div class="absolute">
+							<div class="text">
+								<p>
+									ZVIKA<br/>Zvika is a chicken that doesn't want to play.
+								</p>
+							</div>
+						</div>
 						<img class="image" src="chicken.png"/>
 					</div>
 				</td>
@@ -19,7 +25,13 @@
 				<td></td>
 				<td class="thecells">
 					<div>
-						<div class="absolute">RAFI<br/>Rafi is a monkey that thinks he is smart. (he isn't)</div>
+						<div class="absolute">
+							<div class="text">
+								<p>
+									RAFI<br/>Rafi is a monkey that thinks he is smart. (he isn't)
+								</p>
+							</div>
+						</div>
 						<img class="image" src="rafi.png"/>
 					</div>
 				</td>
@@ -27,7 +39,13 @@
 				<td></td>
 				<td class="thecells">
 					<div>
-						<div class="absolute">ME<br/>I didn't get my genes from them.</div>
+						<div class="absolute">
+							<div class="text">
+								<p>
+									ME<br/>I didn't get my genes from them.
+								</p>
+							</div>
+						</div>
 						<img class="image" src="me.png"/>
 					</div>
 				</td>
