Finish pictures in main page

--- a/aastores.html
+++ b/aastores.html
@@ -2,6 +2,7 @@
 <html lang="hebrew" dir="rtl">
 	<head>
 		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>א"א חנויות</title>
 		<link rel="stylesheet" type="text/css" href="aastores.css"/>
 	</head>
@@ -29,20 +30,43 @@
 		</div>
 		<div class="menu-item">
 			<div class="menu-image">
+				<img src="aastoresphotostore.jpeg" class="preview"/>
 			</div>
-			<div class="menu-button"></div>
+			<div class="menu-button">
+				<div class="menu-button-text">
+					חנות המגנטים
+				</div>
+			</div>
 		</div>
 		<div class="menu-item">
-			<div class="menu-image"></div>
-			<div class="menu-button"></div>
+			<div class="menu-image">
+				<img src="aastoreplaymobilstore.jpeg" class="preview"/>
+			</div>
+			<div class="menu-button">
+				<div class="menu-button-text">
+					חנות הפליימוביל
+				</div>
+			</div>
 		</div>
 		<div class="menu-item">
-			<div class="menu-image"></div>
-			<div class="menu-button"></div>
+			<div class="menu-image">
+				<img src="aastoreskolbo.jpeg" class="preview"/>
+			</div>
+			<div class="menu-button">
+				<div class="menu-button-text">
+					חנות כלבו
+				</div>
+			</div>
 		</div>
 		<div class="menu-item">
-			<div class="menu-image"></div>
-			<div class="menu-button"></div>
+			<div class="menu-image">
+				<img src="aastoresanimalstore.jpeg" class="preview"/>
+			</div>
+			<div class="menu-button">
+				<div class="menu-button-text">
+					חנות החיות
+				</div>
+			</div>
 		</div>
 	</div>
 
