Done designing the page

--- a/aastores.html
+++ b/aastores.html
@@ -22,11 +22,13 @@
 			<div class="menu-image">
 				<img class="preview" src="aastoresfoodstore.jpeg"/>
 			</div>
+			<a href="aastoresfoodstore.html" class="no-style-link">
 			<div class="menu-button">
 				<div class="menu-button-text">
 					חנות האוכל
 				</div>
 			</div>
+			</a>
 		</div>
 		<div class="menu-item">
 			<div class="menu-image">
