Added food store products, gotta add store description

--- a/aastoresfoodstore.html
+++ b/aastoresfoodstore.html
@@ -24,7 +24,44 @@
 			</div>
 		</div>
 		<div class="content-container">
-			<div class="content"></div>
+			<div class="content">
+				מארז חמש ביצים קשות (15 שקלים)<br/>
+				ביצת עין (6 שקלים)<br/>
+				סט מוצרי חלב: חלב, שוקו וגבינה (48 שקלים)<br/>
+				סט כפיות פו הדוב: כפית ירוקה וכפית ורודה (8 שקלים)<br/>
+				סט כפיות ללא ציור: כפית ורודה כהה וכפית ורודה בהירה (8 שקלים)<br/>
+				סט סכו"ם ממתכת: 2 מזלגות, 2 כפיות, 1 סכין (20 שקלים)<br/>
+				סט סכו"ם פלסטיק ירוק: 2 מזלגות, 3 כפיות, 3 סכינים (30 שקלים)<br/>
+				סט כוס + צלחת עטורי ציורי פרחים (20 שקלים)<br/>
+				סט סכו"ם מפלסטיק לילדים: סכין, מזלג וכפית (16 שקלים)<br/>
+				סט סכינים: 2 סכינים (8 שקלים)<br/>
+				סט סכו"ם פלסטיק כחול: 1 כפיית, 1 מזלג, 1 סכין (15 שקלים)<br/>
+				קופסת קורנפלקס טבעות חיטה מדגנים מלאים: משקל נקי 500 גרם (20 שקלים)<br/>
+				סט כוסות לילדים: כוס ורודה וכוס צהובה (20 שקלים)<br/>
+				מכשיר להכנת ביצי עין (30 שקלים)<br/>
+				מלחייה (15 שקלים)<br/>
+				סט כפיות לילדים: 3 כפיות עם תבליטי דינוזאורים (12 שקלים)<br/>
+				סט כפיות: 2 כפיות בצבע אדום דובדבן (8 שקלים)<br/>
+				עוגיית שוקולד צ'יפס (4 שקלים)<br/>
+				בקבוק ספרייט 1 ליטר (9 שקלים)<br/>
+				תבלין למרק משקל נקי 150 גרם (15 שקלים)<br/>
+				מארז 2 נקניקיות מתוצרת מעולה (10 שקלים)<br/>
+				מארז עוגיות עם שני סוגי עוגיות: 10 ביסקוויטים ו-10 עוגיות שוקולד צ'יפס (40 שקלים)<br/>
+				עוגת שוקולד: בראוניז בניחוח מפתה (25 שקלים)<br/>
+				מארז 2 דגי סלמון טריים (25 שקלים)<br/>
+				כנפי עוף 1 ק"ג (30 שקלים)<br/>
+				עוף פולקה 1 ק"ג (30 שקלים)<br/>
+				משולש פיצה איכותי עם עגבניות, זיתים שחורים ופטרוזיליה (10 שקלים)<br/>
+				קרואסון עם ממרח שוקולד (10 שקלים)<br/>
+				מארז צ'יפס, משקל נקי: 100 גרם (15 שקלים)<br/>
+				המבורגר בהרכבה עצמית - אפשרויות לתוספות: חסה, מלפפון, גבינה - קציצה 240 גרם (50 שקלים)<br/>
+				מארז מטבל עגבניות: בקבוק מטבל עגבניות ופחית מטבל עגבניות (15 שקלים)<br/>
+				פחית מיץ פירות מוגז (10 שקלים)<br/>
+				5 פרוסות בייקון דקות (20 שקלים)<br/>
+				מחית תפוחים איכותית לפעוטות (15 שקלים)<br/>
+				תירס גמדי (7 שקלים)<br/>
+				אגס ירוק קונקורד (7 שקלים)
+			</div>
 			<div class="content">אבא הוא תרנגולת אפילו יותר מזה שאילה היא בטטה</div>
 		</div>
 	</body>
