--- a/fun/01/index.html
+++ b/fun/01/index.html
@@ -9,7 +9,8 @@
 
 	<body>
         <div class="corona-container">
-			<div class="corona-wrapper" onclick="coronaClick(this);">
+			<div class="corona-wrapper" onclick="coronaClick(this);"
+			     ondragend="coronaDrag(this);">
 				<img src="covid-19.png" class="corona-image"/>
 			</div>
 		</div>
