--- a/fun/01/index.html
+++ b/fun/01/index.html
@@ -10,7 +10,7 @@
 	<body>
         <div class="corona-container">
 			<div class="corona-wrapper" onclick="coronaClick(this);"
-			     ondragend="coronaDrag(this);">
+			     ondragend="coronaDrag(this);" ontouchmove="coronaDrag(this);">
 				<img src="covid-19.png" class="corona-image"/>
 			</div>
 		</div>
