I can drag but not drop):

--- a/fun/03/index.html
+++ b/fun/03/index.html
@@ -10,51 +10,51 @@
 		<div class="all">
 			<div class="board">
 				<div class="line">
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="empty-slot"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg"></div>
-					<div class="peg"></div>
-					<div class="peg"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
+					<div class="peg" draggable="true"></div>
 		  		</div>
 			</div>
 		</div>
