Yayyyyyyy I can drop!!!!

--- a/fun/03/index.html
+++ b/fun/03/index.html
@@ -4,57 +4,58 @@
 		<title>Peg Solitaire</title>
 		<link rel="stylesheet" type="text/css" href="pegSolitaire.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src="pegSolitaire.js"></script>
 	</head>
 
 	<body>
 		<div class="all">
 			<div class="board">
 				<div class="line">
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
+					<div id="slot01" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot02" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot03" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
+					<div id="slot04" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot05" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot06" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
+					<div id="slot07" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot08" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot09" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot10" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot11" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot12" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot13" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="empty-slot"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
+					<div id="slot14" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot15" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot16" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot17" class="empty-slot" ondragover="allowDrop(event);" ondrop="drop(event);"></div>
+					<div id="slot18" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot19" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot20" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
+					<div id="slot21" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot22" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot23" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot24" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot25" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot26" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot27" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
+					<div id="slot28" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot29" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot30" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
 		  		</div>
 				<div class="line">
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
-					<div class="peg" draggable="true"></div>
+					<div id="slot31" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot32" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot33" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
 		  		</div>
 			</div>
 		</div>
